[tool.poetry]
name = "networkrl"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# Dependency-specific options for pre-commit hooks


[tool.black]
# `black` dependency options
line-length = 88
target-version = ["py311"]


[tool.mypy]
# `mypy` dependency options
python_version = "3.11"
follow_imports = "skip"
ignore_missing_imports = true
follow_imports_for_stubs = false


[tool.isort]
# `isort` dependency options
profile = "black"


[tool.flake8]
# `flake8` dependency options
## F821 - prevents @profile decorators with mprof actions in test runs
## W503 - conflicts with Black linting on binary operators on newlines
## E501 - Some queries exceed the line length
ignore = ["F821", "W503", "E501", "E501"]


[tool.interrogate]
# `interrogate` dependency options
verbose = 1
fail-under = 0
badge-format = "svg"
omit-covered-files = true
ignore-init-method = true
ignore-init-module = true
ignore-nested-classes = true
ignore-nested-functions = true
ignore-property-decorators = true
generate-badge = "badges/"
